--- a/myntra.css
+++ b/myntra.css
@@ -102,6 +102,7 @@ body {
     
 }
 
+
 #navbar li{
     list-style-type: none;
     padding: 0 20px;
@@ -138,6 +139,14 @@ color: #1c9105;
     height: 60px;
 }
 
+#mobile{
+  display: none;
+  align-items: center;
+
+}
+#close{
+  display: none;
+}
 /* Home Page */
 
 #hero{
@@ -580,4 +589,278 @@ footer a:hover{
 #copyright{
   width: 100%;
   text-align: center;
+}
+
+/* SHOP PAGE */
+
+#page-header{
+background-image: url(img/shopbanner4.jpg);
+width: 100%;
+background-size: cover;
+background-position: center -500%;
+height: 40vh;
+display: flex;
+justify-content: center;
+text-align: left;
+flex-direction: column;
+color: #d9ff04;
+padding-left: 20px;
+}
+
+#page-header h2, 
+#page-header p{
+  color: #111111;
+}
+
+#page-header h2 span{
+  color:  #fffb05;
+}
+#page-header h3 span{
+color: #ffffff;
+}
+#pagination{
+  text-align: center;
+}
+#pagination a{
+  text-decoration: none;
+  background-color: rgb(56, 178, 235) ;
+  padding: 15px 20px;
+  margin: 1.5px;
+  border-radius: 4px;
+  color: white;
+  font-weight: 600;
+  transition: .4s ease;
+
+}
+
+#pagination a:hover{
+  background-color: white;
+  color: rgb(56, 178, 235);
+  
+}
+
+/* Single Product  */
+
+#prodetails{
+  display: flex;
+  margin-top: 20px;
+}
+#prodetails .single-pro-image{
+width: 40%;
+margin-right: 50px;
+
+}
+
+.small-img-group{
+  display: flex;
+  justify-content: space-between;
+}
+
+.small-img-col{
+  flex-basis: 24%;
+  cursor: pointer;
+}
+
+/* Styling for the custom select */
+.custom-select {
+  display: block;
+  margin-bottom: 10px;
+  padding: 5px;
+  font-size: 13px;
+  color: #000000;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  appearance: none; /* Remove default styles on certain browsers (e.g., Safari) */
+ 
+}
+
+/* Styling for the arrow icon */
+.custom-select::after {
+  content: "\f078"; /* Unicode for the down arrow icon (Font Awesome) */
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  /* transform: translateY(-50%); */
+  pointer-events: none; /* To make the arrow non-clickable */
+}
+
+/* Hover effect */
+.custom-select:hover {
+  border-color: #999;
+  background-color: rgb(243, 181, 25);
+  
+  color: #000000;
+  font-weight: 550;
+  cursor: pointer;
+  /* border-radius: 15px; */
+}
+
+/* Transition for smooth effects */
+.custom-select {
+  transition: border-color, background-color .3s ease;
+}
+
+/* Hover effect on the arrow icon */
+.custom-select:hover::after {
+  color: #555;
+}
+
+#prodetails .single-pro-details{
+  width: 50%;
+  padding-top: 30px;
+}
+
+#prodetails .single-pro-details h4{
+  padding: 40px 0 20px 0;
+
+}
+
+#prodetails .single-pro-details h2{
+   font-size: 26px;
+
+}
+
+#prodetails .single-pro-details input{
+  width: 45px;
+  height: 40px;
+  margin-top: 5px;
+  padding-left: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+  border-radius: 10px;
+  border: 2px solid #3083f8;
+  transition: .5s ease;
+}
+
+#prodetails .single-pro-details input:hover{
+  border: 2px solid rgb(197, 197, 7);
+  font-weight: 600;
+  width: 13%;
+}
+
+.single-pro-details i{
+  font-size: 35px;
+  padding-top: 20px;
+  display: inline-block;
+  justify-content: top;
+  
+}
+
+@media (max-width: 477px) {
+  #navbar{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #e3e6f3;
+    box-shadow: 0 40px 6px rgba(0, 0, 0, 0.01);
+    padding: 80px 0 0 10px;
+    transition: 0.4s ease;
+  }
+
+  #navbar.active{
+    right: 0px;
+  }
+  #navbar li{
+    margin-bottom: 25px;
+  }
+  .section-p1 {
+    padding: 20px;
+  }
+  #header {
+    padding: 10px 30px;
+  }
+  h1{
+    font-size: 38px;
+  }
+  h2{
+    font-size: 32px;
+  }
+  #hero{
+    padding: 0 20px;
+    background-position: 65%;
+  }
+  #feature {
+    justify-content: space-between;
+  }
+  #feature .fe-box{
+    width: 155px;
+    margin: 0 0 15px 0;
+  }
+  #product1 .pro{
+    width: 100%;
+  }
+  #banner{
+    height: 40vh;
+  }
+  #sm-banner .banner-box{
+    height: 40vh;
+    display: none;
+   
+    
+  }
+  #sm-banner .banner-box2{
+    margin-top: 20px;
+  }
+  #banner3 {
+    padding: 0 20px;
+  }
+ #banner3 .banner-box{
+  width: 100%;
+ }
+ #newsletter{
+  padding: 40px 20px;
+ }
+ #newsletter.form{
+  width: 100%;
+   
+ }
+
+ #copyright{
+  text-align: center;
+ }
+
+ /* single Product */
+ #prodetails {
+  display: flex;
+  flex-direction: column;
+ }
+ #prodetails .single-pro-image{
+  width: 100%;
+  margin-right: 0px;
+ }
+ #prodetails .single-pro-details{
+  width: 100%;
+ }
+ #mobile{
+  display: flex;
+  align-items: center;
+
+}
+#mobile i{
+  color: #1a1a1a;
+font-size: 24px;
+padding-left: 20px;
+}
+
+#close {
+  display: initial;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  color: #222;
+  font-size: 24px;
+  
+}
+#lg-bag{
+  display: none;
+}
 }
