--- a/myntra.css
+++ b/myntra.css
@@ -919,3 +919,47 @@ margin-right: 50px;
   width: 100%;
  }
 }
+
+/* About Page */
+
+#page-header.aboutheader{
+background-image: url(./img/about/banner.png);
+width: 100%;
+height: 300px;
+background-size: cover;
+background-position: center center;
+}
+
+#abouthead{
+  display: flex;
+  
+  /* justify-content: center; */
+}
+
+#abouthead p,
+#abouthead h2{
+  margin-left: 200px;
+  
+}
+
+#page-header.aboutheader h2{
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+
+#page-header.aboutheader p{
+  color:#e4fd06 ;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+}
+#abouthead img{
+  height: 40vh;
+  width: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
