--- a/myntra.css
+++ b/myntra.css
@@ -933,6 +933,8 @@ background-position: center center;
 #abouthead{
   display: flex;
   
+  flex-wrap: wrap;
+  
   /* justify-content: center; */
 }
 
