--- a/myntra.css
+++ b/myntra.css
@@ -637,7 +637,7 @@ display: flex;
 justify-content: center;
 text-align: left;
 flex-direction: column;
-color: #d9ff04;
+color: #fffb05;
 padding-left: 20px;
 }
 
