--- a/myntra.css
+++ b/myntra.css
@@ -162,7 +162,7 @@ color: #1c9105;
 /* Home Page */
 
 #hero{
-    background-image: url("./img/hero8.jpg");
+    background-image: url("./img/hero4.png");
     height: 90vh;
     width: 100%;
     background-size: cover;
